GNOME Bugzilla – Bug 652036
crash in clutter_actor_get_stage_interna at clutter-actor.c line 9743
Last modified: 2011-08-22 15:39:57 UTC
Program received signal SIGSEGV, Segmentation fault. 0x009ed0b3 in _clutter_actor_get_stage_internal (actor=<value optimized out>) at ./clutter-actor.c:9743 9743 actor = actor->priv->parent_actor; (gdb) bt
+ Trace 227408
the stack trace is sadly not very useful. can you provide a small, self-contained test case exhibiting the same issue?
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for. Thanks!
reopening, as the bug is being followed on out of Bugzilla.
looking at the various backtraces, I found that this is a duplicate of this bug: http://bugzilla.clutter-project.org/show_bug.cgi?id=2621 which was fixed in master, but not backported. I just pushed the following commit: commit f3532c3335d963402c5dc38d388c41e2491b0be4 Author: Chris Lord <chris@linux.intel.com> Date: Mon Mar 28 16:10:59 2011 +0100 actor: Ensure the validity of the queue_redraw_entry pointer In _clutter_actor_queue_redraw_with_clip, there was the possibility that the actor will add itself to the stage's redraw queue without keeping track of the allocated list member. In clutter_actor_unparent, the redraw queue entry was being invalidated before the mapped notify signal was being fired, meaning that queueing a redraw of an unmapped actor in the mapped notification callback could cause a crash. http://bugzilla.clutter-project.org/show_bug.cgi?id=2621 (cherry picked from commit f9d7650b97c3788763e14ce3b39f21f19edc41bb) Signed-off-by: Emmanuele Bassi <ebassi@linux.intel.com> to the clutter-1.6 branch, and that should hopefully fix the issue.
*** Bug 652031 has been marked as a duplicate of this bug. ***